[gd_scene load_steps=4 format=3 uid="uid://5338yi1m024u"]

[ext_resource type="Script" uid="uid://ce80kw8uawl0g" path="res://editor/KeyTrack/keytrack.gd" id="1_esl8g"]
[ext_resource type="Script" uid="uid://cprngf6ha7356" path="res://editor/KeyTrack/key_container.gd" id="2_ra15f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_esl8g"]
bg_color = Color(0, 0, 0, 1)

[node name="KeyTrack" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1_esl8g")

[node name="FoldableContainer" type="FoldableContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_esl8g")
title = "Track Name"

[node name="KeyContainer" type="Control" parent="FoldableContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_ra15f")

[node name="PopupClic2" type="PopupPanel" parent="."]
oversampling_override = 1.0
size = Vector2i(169, 136)

[node name="VBoxContainer" type="VBoxContainer" parent="PopupClic2"]
offset_left = 4.0
offset_top = 4.0
offset_right = 165.0
offset_bottom = 132.0

[node name="TrackNameLabel" type="Label" parent="PopupClic2/VBoxContainer"]
layout_mode = 2
text = "Track name"

[node name="ChangeNameButton" type="Button" parent="PopupClic2/VBoxContainer"]
layout_mode = 2
text = "Change Track Name"

[node name="ChangeColorButton" type="Button" parent="PopupClic2/VBoxContainer"]
layout_mode = 2
text = "Change Track Color"

[node name="DuplicateButton" type="Button" parent="PopupClic2/VBoxContainer"]
layout_mode = 2
text = "Duplicate Track"

[node name="DeleteButton" type="Button" parent="PopupClic2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.9499975, 0, 0, 1)
theme_override_constants/outline_size = 0
text = "Delete Track"

[node name="PopupColor" type="PopupPanel" parent="."]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(310, 600)

[node name="VBoxContainer" type="VBoxContainer" parent="PopupColor"]
offset_left = 4.0
offset_top = 4.0
offset_right = 306.0
offset_bottom = 596.0

[node name="SelectColorLabel" type="Label" parent="PopupColor/VBoxContainer"]
layout_mode = 2
text = "Select Color"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PopupColor/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PopupColor/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorPicker" type="ColorPicker" parent="PopupColor/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
edit_alpha = false

[node name="HBoxContainer" type="HBoxContainer" parent="PopupColor/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CancelButtonColor" type="Button" parent="PopupColor/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "cancel"

[node name="AceptButtonColor" type="Button" parent="PopupColor/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Acept"

[node name="ChangeNamePopup" type="PopupPanel" parent="."]
oversampling_override = 1.0
initial_position = 1
size = Vector2i(500, 101)

[node name="VBoxContainer" type="VBoxContainer" parent="ChangeNamePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 97.0

[node name="ChangeNameLabel" type="Label" parent="ChangeNamePopup/VBoxContainer"]
layout_mode = 2
text = "Change Track Name"

[node name="ChangeNameLineEdit" type="LineEdit" parent="ChangeNamePopup/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ChangeNamePopup/VBoxContainer"]
layout_mode = 2

[node name="CancelButtonName" type="Button" parent="ChangeNamePopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="AceptButtonName" type="Button" parent="ChangeNamePopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Acept"

[connection signal="gui_input" from="FoldableContainer" to="." method="_on_foldable_container_gui_input"]
[connection signal="pressed" from="PopupClic2/VBoxContainer/ChangeNameButton" to="." method="_on_change_name_button_pressed"]
[connection signal="pressed" from="PopupClic2/VBoxContainer/ChangeColorButton" to="." method="_on_change_color_button_pressed"]
[connection signal="pressed" from="PopupClic2/VBoxContainer/DuplicateButton" to="." method="_on_duplicate_button_pressed"]
[connection signal="pressed" from="PopupClic2/VBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="PopupColor/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/CancelButtonColor" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="PopupColor/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/AceptButtonColor" to="." method="_on_acept_pressed"]
[connection signal="pressed" from="ChangeNamePopup/VBoxContainer/HBoxContainer/CancelButtonName" to="." method="_on_cancel_button_name_pressed"]
[connection signal="pressed" from="ChangeNamePopup/VBoxContainer/HBoxContainer/AceptButtonName" to="." method="_on_acept_button_name_pressed"]
